# gb-emu

./: Cargo.toml  LICENSE  README.md  rust-toolchain
gb/: Cargo.toml
gb/src/: main.rs
gb_core/: Cargo.toml
gb_core/src/: lib.rs
gb_core/src/cpu/: execute.rs  mod.rs
gb_core/src/gameboy/: joypad.rs  memory.rs  mod.rs  timer.rs
gb_core/src/gameboy/cart/: mbc1.rs  mod.rs  rom.rs
gb_core/src/gameboy/ppu/: color.rs  consts.rs  frame.rs  mod.rs  monochrome.rs  registers.rs
gb_core/src/gameboy/ppu/execute/: mod.rs  pixel_fifo.rs
gb_core/tests/: call_ret_test.S  cpu_intructions.rs  jr_test.S  ppu_monochrome.rs
gb_cpu/: Cargo.toml
gb_cpu/src/: decode.rs  execute.rs  lib.rs  registers.rs
gb_iced/: Cargo.toml
gb_iced/src/: main.rs  screen.rs
gb_wgpu/: Cargo.toml
gb_wgpu/src/: main.rs  window.rs
src/: chip.rs  cpu.rs  gameboy.rs  lib.rs
src/cpu/: decode.rs  execute.rs  mod.rs
src/gameboy/: memory.rs  mod.rs
src/gameboy/cart/: mbc1.rs  mod.rs  rom.rs
src/gameboy/ppu/: mod.rs  monochrome.rs  registers.rs
src/ppu/: mod.rs  simple.rs
tests/: call_ret_test.S  cpu_intructions.rs  jp_conditional_test.S  jr_test.S  ppu_monochrome.rs
