[package]
name = "gb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gb_core = { path = ".." }
iced = { version = "0.3", features = ["image", "smol"] }
iced_futures = "*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iced_native = "0.4"
iced_graphics = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced_web = "0.4"
