[package]
name = "gb_iced"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gb_core = { path = "../gb_core" }
iced = { git = "https://github.com/hecrj/iced.git", rev = "589f68df0f647d93f2b9dd7bf29cfacb0201351c", features = [
    "image",
    "smol",
] }
iced_futures = { git = "https://github.com/hecrj/iced.git", rev = "589f68df0f647d93f2b9dd7bf29cfacb0201351c" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iced_native = { git = "https://github.com/hecrj/iced.git", rev = "589f68df0f647d93f2b9dd7bf29cfacb0201351c" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced_web = { git = "https://github.com/hecrj/iced.git", rev = "589f68df0f647d93f2b9dd7bf29cfacb0201351c" }
