[package]
name = "gb_iced"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gb_core = { path = "../gb_core" }
iced = { version = "0.12", features = ["image", "smol"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iced_runtime = "0.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced_web = "0.4"
