[package]
name = "gb_wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gb_core = { path = "../gb_core" }
pixels = "0.13"
winit = { version = "0.29", features = ["rwh_05"] }
smol = "*"
